refactor : 인증 정보를 HttpServletRequest에서 Authentication으로 변경
1. Service 계층에서 서블릿 의존성 제거

모의고사 및 퀴즈 관련 컨트롤러에서 HttpServletRequest 대신 Authentication 객체를 사용하여 사용자 인증 정보를 처리하도록 변경.
이를 통해 코드의 일관성을 높이고, JWT 토큰을 통한 사용자 식별을 개선. 또한, 관련 서비스 메서드에서 요청 객체를 수정하여 사용자 ID를 직접 전달.

2. 함수 리팩토링

함수에 SRP적용하여 기능에 맞게 분할